--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.72.1",
     "react-native-country-codes-picker": "^2.3.3",
     "react-native-deck-swiper": "^2.0.15",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-crop-picker": "^0.40.0",
