--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,7 +54,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = true
+def enableProguardInReleaseBuilds = false
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -75,14 +75,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     namespace "com.cuttingEdges"
-     splits {
-        abi {
-            reset()
-            enable true
-            universalApk false
-            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
-        }
-    }
+  
     defaultConfig {
         applicationId "com.cuttingEdges"
         minSdkVersion rootProject.ext.minSdkVersion
