--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
+    "react-native-star-rating-widget": "^1.7.3",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-swiper": "^1.6.0",
